--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,12 +48,13 @@ fjs.parentNode.insertBefore(js, fjs);
       <div class="menu-item"><a href="/support/index" >Support Paideia</a></div>
     </section>
   
-  
+  <div id="page-content">
     <%= yield %>
+  </div>
 
-<!--  <div id="footer-wrap">
+  <div id="footer-wrap">
     <p id="copyright-notice">This website is © <%= Time.now.year %> The Paideia Institute for Humanistic Study, Inc. Site design by <a href="http://goldibex.com" target="_top">The Gold Ibex.</a> All rights reserved.</p>
-  </div>-->
+  </div>
 
 
   </section>
