--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,10 +28,6 @@ body {
 line-height: 1;
 
 font-family: "Lato", sans-serif;
-
-##background-color: yellow;
-
- ##background-image: url(<%= asset_path 'bg.jpg' %>);
    background-image: url('/assets/bg.jpg');
    background-repeat: no-repeat;
    background-size: 100% 100%;
@@ -74,17 +70,13 @@ font-family: "Lato", sans-serif;
    border: none;
    }
    body {
-   ##background-color: red;
    overflow: auto;
    }
    
    #main-container {
    position:relative;
-   ## width: 960px;
    min-height: 100%;
    margin: 0 auto;
-   ## background-color: yellow;
-   
    overflow: auto;
    }
    
@@ -106,109 +98,37 @@ font-family: "Lato", sans-serif;
      
      
      #content {
-     ## width: 715px;
-     ##float: left;
-     
      min-height: 100%;
-     ##min-height: 100px;
      border-radius: 30px;
-     ## height: 500px;
      background-color: rgba(255,255,255,0.75);
      box-shadow: inset 0 0 10px gray;
      
      position: absolute;
-     ## top: 75px;
      left: 15px;
-     right: 15px;
-     ## margin-bottom: 40px;
-     
+     right: 15px;     
      overflow: auto;
      
      }
-     
-     #content.page-content-box {
-     ## min-height: 100px;
-     ## border-radius: 30px;
-     
-     ## background-color: rgba(255,255,255,0.75);
-     ## box-shadow: inset 0 0 10px gray;
-     
-     min-height: 100%;
-     } 
      
      #page-content {
      
      margin: 20px 10px 20px 500px;
-     width: 1600px; #750px;
+     width: 1600px;
      clear: left;
      overflow: auto;
+     
      }
      
      .page-content-box {
-     ##padding: 10px 20px;
-     ##margin: 20px 10px 20px 450px;
+     min-height: 800px;
      width: 700px;
-     ## color: red;
-     ## background-color: yellow;
-     min-height: 600px; ##750px; ##100%;
-     ##clear: left;
-     ##overflow: auto;
-     
-     ##display: inline;
      float: left;
      margin-bottom: 75px;
-     margin-right: 50px;
+     margin-right: 40px;     
+     padding: 30px 30px 30px 30px;    
+
      
      background-color: rgba(255,255,255,0.5);
-     
-     padding: 30px 0px 30px 30px;    
-     
-     
-     
-     }
-     
-     #page-content-box-text {
-     ## margin-left: 350px;
-     ## margin-top: 4px;
-     ##float: left;
-     ##width: 320px;
-     ##padding: 0px 15px 15px 15px;
-     ## background-color: blue;
-     ## min-height: 100%;
-     ##float: right;
-     ##margin: 15px 75px 15px 315px;
-     ##float: left;
-     ##clear: right;
-     margin-top: 20px;
-     margin-right: 40px;
-     padding-right: 40px;
-     padding-bottom: 30px;
-     text-align: justify; 
-     clear: none;
-     
-     
-     
-     }
-     
-     #text {
-     ## color: red;
-     clear: none;
-     font-size: 20px;
-     font-family:"Times New Roman",Georgia,Serif;
-     
-     }
-     
-     
-     #page-content-box-image {
-     float: left;
-     align: top;
-     ##align: right;
-     ##clear: both;
-     padding-right: 40px;
-     padding-bottom: 40px;
-     ##display: inline;
-     
-     clear: none;
      
      }
      
@@ -245,18 +165,11 @@ font-family: "Lato", sans-serif;
      #pi-menu {
      
      float: left;
-     
-     ##width:608px;
      width: 400px;
-     ##height: 1000px;
-     ##background-color: #222;
      background-image:url(/images/layout/menu-shine.png);
      position: absolute;
-     ##left: 176px;
-     ##top: 75px;
      left: 25px;
      top: 25px;
-     ##border-radius: 0 0 10px 10px;
      border-radius: 5px;
      
      text-shadow: 0 0 0.2em rgba(150,150,150,1);
@@ -277,10 +190,8 @@ font-family: "Lato", sans-serif;
        #pi-menu > .menu-item {
        display:block;
        float: left;
-       ##text-align:center;  
        position: relative;
        margin-top: 25px;
-       ##width:25%;
        width: 95%;
        height: 100px;
        font-size: 48px;
