--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -4,7 +4,7 @@
 
       <div class="overlay_box" id="overlay_box">
       
-      <%= button_tag :id => 'show_button' do%>
+      <%= button_tag do%>
 	<strong>+ / -</strong>
       <% end %>
       
@@ -21,7 +21,7 @@
       
       <div class="overlay_box" id="overlay_box">
       
-      <%= button_tag :id => 'show_button' do%>
+      <%= button_tag do%>
 	<strong>+ / -</strong>
       <% end %>
       
@@ -39,7 +39,7 @@
       
       <div class="overlay_box" id="overlay_box">
 	
-      <%= button_tag :id => 'show_button' do%>
+      <%= button_tag do%>
 	<strong>+ / -</strong>
       <% end %>
 	
@@ -57,7 +57,7 @@
       
       <div class="overlay_box" id="overlay_box">
       
-      <%= button_tag :id => 'show_button' do%>
+      <%= button_tag do%>
 	<strong>+ / -</strong>
       <% end %>
       
